fixed on firefox.

--- a/style.css
+++ b/style.css
@@ -80,30 +80,30 @@ section:first-child p {
 }
 
 .touchzone-wrapper {
-	-webkit-perspective: 80em;
-	perspective: 80em;
-
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
 }
 
 .touchzone {
+	position: relative;
 	margin: 12em auto;
 	border: 10px solid rgba(255, 255, 255, .2);
 	padding-top: 75%;
 	width: 100%;
 	background: #a5b83e;
-	-webkit-transition: .2s linear;
-	-moz-transition: .2s linear;
-	transition: .2s linear;
+	-webkit-transition: .2s;
+	-moz-transition: .2s;
+	transition: .2s;
 }
 
 .warp {
 	position: absolute;
-	border: 4px solid rgba(0, 0, 0, .8);;
+	opacity: 0;
+	border: 4px solid rgba(255, 255, 255, .8);;
 	border-radius: 100%;
-	background: rgba(0, 0, 0, .5);
+	background: rgba(255, 255, 255, .5);
+	pointer-events: none;
 }
 
 @media only screen and (min-width: 42.5em /* 680px */) {
